# Local-RAG-Testing

./: .gitignore  ADR-0001-architecture.md  AGENTS.md  CITATIONS.bib  README.md  cli.py  justfile  pyproject.toml
notebooks/: dashboard.py
src/db/: connection.py  queues.py  schema.py
src/evaluation/: pipelines.py  tools.py
src/grading/: grader.py
src/ingestion/: chunking.py  cognee_pipeline.py  contextual_pipeline.py  crawler.py  embed.py  entity_extract.py  graph_extract.py  ladybug_graph.py  staging.py  vector_store.py
src/models/: __init__.py  chat_llamacpp.py  config.py
tests/: conftest.py  test_contextual_pipeline.py  test_crawler.py  test_entity_extract.py  test_grader.py  test_graph_extract.py  test_ingestion_memory.py  test_ingestion_queue_pointer.py  test_pipelines.py  test_queues.py  test_tools.py  test_vector_store.py
