[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lancedb>=0.30.2",
    "llama-index>=0.14.20",
    "llama-index-graph-stores-ladybug>=0.3.0",
    "openai>=2.31.0",
    "pydantic-ai-slim>=1.78.0",
    "real-ladybug>=0.15.3",
]
